--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -30,11 +30,12 @@
     padding: 20px 0;
     
 }
-.title2
+.title2 >h1
 {
     font-size: 1.5rem;
     padding-bottom: 20px ;
     color: #0560ac;
+    font-weight: 500;
 }
 
 
@@ -93,7 +94,7 @@
     {
         font-size: 1.8rem;
     }
-    .title2
+    .title2>h1
     {
         font-size: 1.2rem;
     }
